# soleflip

./: .coverage  .editorconfig  .env.development  .env.example  .env.template  .gibsonai  .gitignore  .overnight-dev.json  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  API_Quality_Assessment_Report_2025-09-13.md  API_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.json  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODEBASE_CLEANUP_REPORT.md  CODEBASE_STRUCTURE.md  CODEBASE_STRUCTURE_DETAILED.md  CONSOLIDATED_MIGRATION_DELIVERY.md  DEBUG_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  MOCK_DATA_ELIMINATION_COMPLETE.md  Makefile  ORGANIZATION_SUMMARY.md  PLATFORM_CLARIFICATION.md  README-Docker.md  README.md  README_PRODUCT_REVIEW.md  REFACTORING_ROADMAP.md  SECURITY_NOTICE.md  VERSION.md  VERSION_NOTES.md  WORKFLOW_SETUP.md  add_test_inventory.py  alembic.ini  analyze_code_style.py  analyze_documentation.py  (+48 more)
.claude/: settings.local.json
.github/: CI_CD_SETUP.md  PIPELINE_QUICK_REFERENCE.md  dependabot.yml  pull_request_template.md
backups/: DEBUGGING_REPORT_20251122.md  FINAL_DELIVERABLES_20251122.md  REFACTORING_PLAN_20251122.md  backup-manifest-20251122-190822.txt  checksums-20251122-190822.sha256  ci-cd-config-snippet.yml  mypy-report-20251122.txt  pytest-full-report-20251122.txt  pytest-report-20251122.txt  ruff-detailed-20251122.txt  ruff-report-20251122.txt
budibase-app/: README.md  budibase-export.tar.gz.json  budibase-table-configs.sql  enhanced-api-connectors.json  manual-setup-steps.md  quick-start-checklist.md  setup-guide.md  stockx-api-app.json  stockx-api-gap-analysis.md
cli/: .env.example  README.md  awin.py  cli.py  cli_session.json  config.py  db.py  demo.py  requirements.txt  security.py  shopify.py  stockx.py  stockx_real.py  utils.py
config/: README.md
context/: 02_cleanup.md  03_refactoring.md  05_testing_validation.md  06_documentation_updates.md  07_final_report.md  09_budibase_direct_database_integration.md  10_refactoring_lessons_learned.md  API_ENDPOINT_STATUS_v2.2.5.md  MIGRATION_INDEX.md  README.md  analytics-views-migration-plan.md  api-functionality-test-report.md  api-issues-found.md  auth-system-migration.md  coverage-improvement-plan.md  current_database_schema.md  database-analysis.md  design-principles.md  dexter-agent-patterns-analysis.md  hybrid-ai-architecture-n8n.md  memori-ai-integration-plan.md  metabase-api-integration-explained.md  migration-chain-fix.md  migration-timeline.md  notion-import-status-report.md  notion-postgres-sync-strategy.md  notion-schema-analysis.md  orders-multi-platform-migration.md  pci-compliance-migration.md  project_overview.md  stockx-sku-strategy.md  style-guide.md  transactions-schema-analysis.md
data/: README.md
deployment/: PORTAINER-DEPLOY-GUIDE.md  SCHEMA_STRUCTURE.md  STACK-CHANGES.md  init-databases.sql  schema-consolidation-migration.sql  schema-domain-restructuring-v2.sql  schema-supplier-consolidation-v2.3.4.sql  schema-tables-phase2.sql  schema-tables.sql  schema-unified-multiplatform-v2.3.3.sql
docs/: CLI_README.md  DEPLOYMENT_SECRETS_SETUP.md  MEMORY_OPTIMIZATION_2025-12-07.md  OVERNIGHT_DEV_SETUP.md  POC_GUIDE.md  PRICING_FORECAST_DEPLOYMENT_README.md  PRICING_FORECAST_TECH_REPORT.md  SCHEMA_OPTIMIZATION_2025-12-10.md  SCHEMA_OPTIMIZATION_WEEK2-3_2025-12-11.md  api_documentation.py  brand_supplier_history.md  database-optimization-plan.md  database-schema-complete-analysis.md  metabase_dashboard_setup_guide.md  metabase_pricing_kpis_dashboard.sql  metabase_sales_forecast_dashboard.sql  metabase_setup_guide.md  n8n_README.md  n8n_quick_start.md  n8n_workflows.md  n8n_workflows_summary.md  openapi.json  phase1-deployment-summary.md  phase2-code-migration-guide.md  phase2-deployment-summary.md  phase2-schema-consolidation-plan.md  postman_collection.json  schema_enhancements.md  shopify_mapping.md
domains/: __init__.py
examples/: dexter_patterns_usage.py
gui/: .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  (+1 more)
integrations/: README.md
metabase/: README.md  annotations.sql  metabase_dashboards.json
migrations/: env.py  phase1_quick_wins.sql  phase2_schema_consolidation.sql
n8n-workflows/: QUICK_START.md  README.md  SETUP_GUIDE.md  WORKFLOW_DIAGRAM.md  profit_alerts_table.sql  stockx-profit-checker.json
n8n_workflows/: stockx_import_workflow.json
nas-deployment/: .env.portainer.example  OPTIMIZATION-SUMMARY.md  PORTAINER-SETUP.md  docker-compose.portainer.yml
nginx/: nginx.conf
redis/: redis.conf
retro_cli/: config.py  demo.py  requirements.txt  stockx.py  stockx_real.py
scripts/: MINDSDB_CREATE_KB_SYNTAX.md  MINDSDB_KNOWLEDGE_BASE_STRATEGY.md  MINDSDB_SQL_EXAMPLES.sql  README.md  README_MINDSDB.md  README_MINDSDB_MCP.md  analyze_awin_profit_opportunities.py  build_complete_migration.py  bulk_enrich_last_30_products.py  check_awin_import.py  check_enrichment_status.py  check_orders.sql  check_products_enrichment.py  check_stockx_credentials.py  check_stockx_data.py  check_user_role_enum.sql  cleanup_duplicate_history.py  create_asphaltgold_supplier.py  create_kbs_mcp_automated.py  create_metabase_supplier_views.py  create_mindsdb_kbs_via_mcp.py  create_mindsdb_knowledge_bases.py  create_test_user.sql  deploy_metabase_views.py  extract_awin_feed.py  find_asphaltgold.py  find_stockx_awin_matches.py  fix_metabase_views.py  fix_user_roles.sql  generate_complete_gibson_migration.py  gibson_schema_postgres.sql  import_allike_invoice.py  import_awin_sample_feed.py  import_nike_accounts.py  inspect_variants_gtins.sql  notion_bi_test_import.py  populate_afew_asphaltgold_history.py  populate_allike_history.py  populate_bstn_overkill_history.py  record_asics_sale.py  (+17 more)
shared/: __init__.py
soleflip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sql/: README.md
tests/: conftest.py  load_testing.py
workflows/: .gitkeep  DATABASE-MAINTENANCE-WORKFLOWS.md  INDEX.md  N8N_WORKFLOW_OPTIMIZATIONS_2025-12-11.md  QUICKSTART.md  README.md  WORKFLOW-DIAGRAM.md  (+3 more)
(+711 files in other folders)
