[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soleflip"
version = "2.2.1"
description = "Professional sneaker reselling management system with multi-platform support"
authors = [{name = "SoleFlipper Team", email = "info@soleflip.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["sneaker", "reselling", "inventory", "management", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.7",
    "asyncpg>=0.29.0",
    
    # Data processing
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    
    # Validation and serialization
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    
    # Async HTTP client
    "httpx>=0.25.0",
    "requests>=2.31.0", # Added for setup scripts
    
    # Logging and monitoring
    "structlog>=23.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",

    # Authentication
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",

    # Monitoring
    "psutil>=5.9.0",

    # Redis
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.19.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "psutil>=5.9.0",
    "ruff>=0.1.0",  # Modern linter replacement for flake8
]

ml = [
    # Machine Learning for forecasting and analytics
    "scikit-learn>=1.6.0",  # Random Forest, Linear Regression, Gradient Boosting
    "statsmodels>=0.14.4",  # ARIMA time series models
    "scipy>=1.14.0",  # Scientific computing (dependency for both above)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=domains",
    "--cov=shared",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "api: API endpoint tests",
    "slow: Slow running tests",
    "database: Tests requiring database",
    "performance: Performance tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["domains", "shared"]
omit = [
    # Test and build exclusions
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "main.py",

    # Phase 1 Coverage Optimization - Non-critical modules
    # Admin functionality - not in production
    "*/admin/*",
    # Performance modules - complex, low test value
    "*/performance/*",
    # Event system - not actively used
    "*/events/*",
    # Data transformers - utility functions with low test ROI
    "shared/utils/data_transformers.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class.*Protocol.*:",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Third party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "cryptography.*",
    "structlog.*",
    "alembic.*",
    "psutil.*"
]
ignore_missing_imports = true

# Test modules can have relaxed typing
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Scripts can have relaxed typing
[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Migrations can have relaxed typing
[[tool.mypy.overrides]]
module = "migrations.*"
disallow_untyped_defs = false

[tool.setuptools]
packages = ["domains", "shared", "scripts", "tests"]